--- a/Aerolínea/css/sobreNosotros.css
+++ b/Aerolínea/css/sobreNosotros.css
@@ -2,14 +2,10 @@
 .container {
     display: flex;
     flex-direction: column;
-    min-height: 85vh; 
+    width: 850px;
+    height: 850px;
 }
 
-
-
-.content {
-    flex-grow: 1; 
-}
 
 .texto1{
     font-family: Arial, Helvetica, sans-serif;
@@ -173,9 +169,6 @@ a{
       flex-direction: column;
     }
 
-    .sizeBruno{
-      width: 50%;
-    }
   }
 
 
@@ -190,3 +183,9 @@ a{
         width: 70%;
     }
   }
+
+  @media only screen and (max-width: 500px){
+    .info2{
+        font-size: 26px;
+    }
+}
