--- a/Aerolínea/css/menu.css
+++ b/Aerolínea/css/menu.css
@@ -17,6 +17,9 @@
     --color-scroll: rgb(192, 192, 192);
     --color-scroll-hover: rgb(134, 134, 134);
 }
+ion-icon{
+    color : #e6c30a;
+ }
 
 * {
     margin: 0;
