cambio de color en reservas

--- a/Aerolínea/css/misreservas.css
+++ b/Aerolínea/css/misreservas.css
@@ -30,7 +30,7 @@
 .price__element--best{
     width: 370px;
     padding: 60px 40px;
-    background-color: #d4e637;
+    background-color: #E6C30A;
     --color-plan: rgb(255 255 255 / 75%);
     --color-price: #819295;
     --bg-cta: #819295;
