--- a/Aerolínea/css/vuelosdiarios.css
+++ b/Aerolínea/css/vuelosdiarios.css
@@ -10,6 +10,7 @@
     border: 1px gray solid;
     justify-content: space-between;
     border-radius: 5px 5px 5px 5px;
+    margin: 3px 0px 0px 0px;
 }
 
 #globouno{
