--- a/Aerolínea/css/vuelosdiarios.css
+++ b/Aerolínea/css/vuelosdiarios.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 0px 0px 0px 20px;
-    border-left: 3px solid red;
+    border-left: 3px solid yellow;
 }
 
 #contenedordeinline{
