--- a/Aerolínea/css/reservas.css
+++ b/Aerolínea/css/reservas.css
@@ -4,6 +4,13 @@
     width: 24.99999%;
   }
 
+  #cabezeravuelossemanales{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 0px 0px 20px;
+    border-left: 3px solid yellow;
+}
+
 .navbar{
     overflow: hidden;
     position: fixed;
