--- a/Aerolínea/css/reservas.css
+++ b/Aerolínea/css/reservas.css
@@ -45,8 +45,23 @@
 .container {
     display: flex;
     flex-direction: column;
-    min-height: 85vh; 
+    min-height: 85vh;
+
+
 }
+
+.container2{
+    width:85%;
+    margin:0px 5px 0px auto;
+    flex-direction: column;
+    float: center;
+    align-items: center;
+  }
+
+
+
+
+
 
 footer{
     background-color: #000000;
